[package]
name = "mosup"
version = "0.1.0"
authors = ["krircc <krircc@qq.com>"]
edition = "2018"

[dependencies]
ntex = "0.3"
mongodb = "2.0.0-alpha.1"
tokio = "1.5.0"
anyhow = "1.0.40"
chrono = { version = "0.4", features = ["serde"]}
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"